# VehicleCounter

./: CMakeLists.txt  README.md  main.cpp  mainold.cpp  vehicle.cpp  vehicle.h  vehiclelogger.cpp  vehiclelogger.h
objdetector/: detector.cpp  detector.h
